--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
     
-     <img src="/imagem/foto.jpg" alt="">
+     <img src="/imagem/foto.jpg" alt="Foto Perfil">
      <h1>Mariana Raquel Damasceno da Silva</h1>
      <h3>Brasileira, solteira, 30 anos.</h3>
      <h3>E-mail:raquel.damas.md@gmail.com</h3>
